# MediaFetch

./: .gitattributes  .gitignore  DISCLAIMER.md  INSTALL.md  LICENSE  README.de.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml
docs/design/: STUDIO.md
installer/: mediafetch.iss
scripts/: build.py  build_installer.ps1  generate_icon.py  setup_dev.ps1  setup_fonts.ps1
src/: __init__.py  app.py  main.py  version.py
src/core/: content_filter.py  downloader.py  duplicate_checker.py  format_selector.py  path_builder.py  platform.py  queue_manager.py  updater.py  validators.py
src/models/: download_item.py  history_entry.py  settings.py
src/services/: history_service.py  log_service.py  network_service.py  settings_service.py  update_service.py
src/ui/: main_window.py
src/ui/dialogs/: age_warning_dialog.py  copyright_dialog.py  duplicate_dialog.py  format_dialog.py  update_dialog.py
src/ui/i18n/: de.json  en.json  translator.py
src/ui/themes/: dark.qss  light.qss  theme_manager.py  tokens.py
src/ui/widgets/: brand_widget.py  (+10 more)
src/utils/: filename.py  fonts.py  logger.py  paths.py  version.py
src/workers/: download_worker.py
tests/: conftest.py  test_duplicate_checker.py  test_filename.py  test_path_builder.py  test_platform.py  test_version.py
tests/fixtures/: youtube_video.json
tests/integration/: test_download_flow.py
tests/unit/: test_content_filter.py  test_downloader.py  test_format_selector.py  test_history_service.py  test_log_service.py  test_logger.py  test_network_service.py  test_paths.py  test_queue_manager.py  test_settings.py  test_update_service.py  test_updater.py  test_validators.py
