[project]
name = "mediafetch"
version = "1.0.0"
description = "Desktop video downloader for YouTube, Instagram, and TikTok"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "PyQt6>=6.6",
    "yt-dlp>=2024.1",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
]

[project.scripts]
mediafetch = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
qt_api = "pyqt6"
markers = [
    "integration: integration tests (may use Qt event loop)",
]

[tool.coverage.run]
source = ["src/core", "src/services", "src/utils"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_empty = true
